# mimoCoRB2

./: .gitignore  README.md  control.py  daq_ringbuffer.py  gui.ui  main.py  mimo_buffer.py  mimo_logger.py  mimo_worker.py  old_main.py  pyproject.toml  requirements.txt  ringbuffer.py
docs/source/: conf.py  index.rst
docs/source/developer_guide/: buffers.rst  index.rst
docs/source/getting_started/: examples.rst  index.rst  installation.rst  introduction.rst
docs/source/modules/: mimo_buffer.rst
docs/source/user_guide/: buffers.rst  complex_workers.rst  index.rst  provided_functions.rst  running_an_experiment.rst  setup.rst  (+2 more)
examples/mimo_files/: read_setup.yaml  write_setup.yaml
examples/muon/: README.md  config.yaml  data_simulation.py  filters.py  hist_config.yaml  hist_config_down.yaml  hist_config_up.yaml  lifetime_filter.py  simul_source.py  simulate_source.py  source_config.yaml  spin_setup.yaml
examples/redpitaya-spectroscopy/: README.md  config.yaml  histogram_config.yaml  pha_config.yaml  redpitaya-mimocorb.py  setup.yaml
examples/simple/: config.yaml  functions.py  setup.yaml
mimocorb2/: __init__.py  __main__.py  control.py  control_gui.py  control_gui_old.py  control_gui_refactoring.py  control_stats_logger.py  control_terminal.py  control_v2.py  function_templates.py  gui.py  gui.ui  mimo_buffer.py  mimo_worker.py  old_control.py  worker_templates.py
mimocorb2/control_interfaces/: control_gui.py
mimocorb2/functions/: README.md  __init__.py  analyzers.py  data.py  doc_template.py  exporters.py  misc.py  observers.py  visualizers.py
(+10 files in other folders)
