[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mimoCoRB2"
description = "Multiple In Multiple Out Configurable Ring Buffer manager"
authors = [
    {name = "Julian Baader", email = "julian.baader@gmx.de"}
]

version = "0.1.0"

dependencies = [
    "numpy",
    "pyyaml",
    "graphviz",
    "scipy",
    "pandas",
    "matplotlib",
    "PyQt5",
]
requires-python = ">= 3.12"

readme = "README.md"
license = "MIT"
# TODO Keywords

# TODO add script

[project.optional-dependencies]
dev = [
    "sphinx",
]