[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mimoCoRB2"
description = "Multiple In Multiple Out Configurable Ring Buffer manager"
authors = [
    {name = "Julian Baader", email = "julian.baader@gmx.de"}
]

version = "0.1.0"

dependencies = [
    "numpy",
    "pyyaml",
    "graphviz",
    "scipy",
    "pandas",
    "matplotlib",
    "PyQt5",
]
requires-python = ">= 3.12"

readme = "README.md"
license = {file = "LICENSE"}
#license = "MIT"
# TODO Keywords

[project.scripts]
mimocorb2 = "mimocorb2.__main__:main"

[tool.setuptools.package-data]
mimocorb2 = ["*.ui"]

[project.optional-dependencies]
dev = [
    "sphinx",
]
